--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -122,6 +122,22 @@ a {
     background-color: rgb(22, 168, 132);
   }
 
+  /* UP 또는 DOWN 시 공 움직임 */
+  .selected {
+    animation: jumping 0.3s infinite linear alternate;
+  }
+  @keyframes jumping {
+    0% {
+        transform: translateY(0);
+    }
+    50% {
+        transform: translateY(-10px);
+    }
+    100% {
+        transform: translateY(-20px);
+    }
+  }
+
   .win {
     position: absolute;
     top: 50%;
@@ -129,12 +145,14 @@ a {
     transform: translate(-50%, -50%);
     width: 50%;
     height: 200px;
-    background-color: tomato;
+    background-color: rgb(255, 0, 98);
     text-align: center;
     line-height: 200px;
     font-size: 3rem;
+    font-weight: bold;
     color: #fff;
     border: 5px solid black;
     border-radius: 20px;
     opacity: 0; /* 정답 맞힐 경우 1로 변경 */
+    transition: 0.5s;
   }
