--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -47,7 +47,7 @@ a {
     color: rgb(1, 5, 240);
   }
 
-  div#numbers {
+  #numbers {
     height: 550px;  
     margin: 20px 20px 30px 60px;
     display: flex;
@@ -56,45 +56,44 @@ a {
     overflow: auto;
   }
 
-  div#numbers .icon {
+  #numbers .icon {
     color: #fff;
-    font-size: 1.3rem;
+    font-size: 1.7rem;
     font-weight: 700;
-    width: 60px;
-    height: 60px;
+    width: 90px;
+    height: 90px;
     border-radius: 50%;
     text-align: center;
-    line-height: 60px;
+    line-height: 90px;
     cursor: pointer;
     box-shadow: 3px 5px 0px rgba(0, 0, 0, 0.8);
     margin: 30px;
   }
 
-  div#numbers .icon:hover {
-    transform: scale(1.2);
-    opacity: 0.9;
-  }
-
-  div#numbers .icon:nth-child(5n) {
+  #numbers .icon:nth-child(5n) {
     background-color: rgb(247, 210, 0);
   }
 
-  div#numbers .icon:nth-child(5n-1) {
+  #numbers .icon:nth-child(5n-1) {
     background-color: rgb(0, 160, 8);
   }
 
-  div#numbers .icon:nth-child(5n-2) {
+  #numbers .icon:nth-child(5n-2) {
     background-color: rgb(255, 42, 42);
   }
 
-  div#numbers .icon:nth-child(5n-3) {
+  #numbers .icon:nth-child(5n-3) {
     background-color: rgb(43, 64, 255);
   }
 
-  div#numbers .icon:nth-child(5n-4) {
+  #numbers .icon:nth-child(5n-4) {
     background-color: rgb(255, 116, 23);
   }
 
+  #numbers .icon:hover {
+    transform: scale(1.1);
+    opacity: 0.9;
+  }
 
   aside .up,
   aside .down {
@@ -151,8 +150,9 @@ a {
     font-size: 3rem;
     font-weight: bold;
     color: #fff;
-    border: 5px solid black;
+    border: 5px dashed black;
     border-radius: 20px;
     opacity: 0; /* 정답 맞힐 경우 1로 변경 */
-    transition: 0.5s;
+    transition: 0.2s;
+    z-index: -999;
   }
